align HOO filter fields to align correctly when label has multiple lines

--- a/src/web/themes/custom/workbc/scss/components/_high-opportunity-occupations.scss
+++ b/src/web/themes/custom/workbc/scss/components/_high-opportunity-occupations.scss
@@ -7,6 +7,7 @@
 .view-high-opportunity-occupations .form--inline {
   display: grid;
   grid-template-columns: 50% 50%;
+  align-items: end;
 }
 
 
